name:                oauthenticated
version:             0.1.0.0
synopsis:            Simple OAuth client code built atop http-conduit

description:         

  OAuth is a popular protocol allowing servers to offer resources
  owned by some user to a series of authorized clients securely. For
  instance, OAuth lets Twitter provide access to a user's private
  tweets to the Twitter client registered on their phone.
  
  @oauthenticated@ is a Haskell library implementing OAuth protocols
  atop the popular @http-conduit@ HTTP client library. The goal is to
  provide a general framework for signing
  'Network.HTTP.Conduit.Request's according to server parameters, a
  simple method for executing the common 3-arm OAuth token negotiation
  protocol, and a simplified API for accessing OAuth-protected
  resources.

  Currently @oauthenticated@ only supports OAuth 1.0 and is in
  alpha. Further testing is needed before trustworthy use can be
  established. Further, OAuth 2.0 support is planned.

license:             MIT
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
copyright:           2013 (c) Joseph Abrahamson
category:            Network, Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Network.HTTP.Conduit.OAuth
    Network.HTTP.Conduit.OAuth.Internal.Signing
    Network.HTTP.Conduit.OAuth.Internal.ToHTTP
    Network.HTTP.Conduit.OAuth.Types
    Network.HTTP.Conduit.OAuth.Types.Basic
    Network.HTTP.Conduit.OAuth.Types.Callback
    Network.HTTP.Conduit.OAuth.Types.Credentials
    Network.HTTP.Conduit.OAuth.Types.Params
    Network.HTTP.Conduit.OAuth.Types.Server
  other-modules:
    Network.HTTP.Conduit.OAuth.Util
  build-depends:       base >=4.6 && <4.7
                     , base16-bytestring
                     , base64-bytestring
                     , blaze-builder
                     , conduit
                     , transformers
                     , mmorph
                     , contravariant
                     , attoparsec
                     , bytestring
                     , profunctors
                     , case-insensitive
                     , containers
                     , cryptohash
                     , failure
                     , http-conduit
                     , http-types
                     , mtl
                     , random
                     , resourcet
                     , time
  hs-source-dirs:      src
  default-language:    Haskell2010