name:                oauthenticated
version:             0.0.3
synopsis:            Simple OAuth client code built atop http-conduit

description:         

  OAuth is a popular protocol allowing servers to offer resources
  owned by some user to a series of authorized clients securely. For
  instance, OAuth lets Twitter provide access to a user's private
  tweets to the Twitter client registered on their phone.
  
  @oauthenticated@ is a Haskell library implementing OAuth protocols
  atop the popular @http-conduit@ HTTP client library. The goal is to
  provide a general framework for signing
  'Network.HTTP.Conduit.Request's according to server parameters, a
  simple method for executing the common 3-arm OAuth token negotiation
  protocol, and a simplified API for accessing OAuth-protected
  resources.

  Currently @oauthenticated@ only supports OAuth 1.0 and is in
  alpha. Further testing is needed before trustworthy use can be
  established. Further, OAuth 2.0 support is planned.

license:             MIT
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
copyright:           2013 (c) Joseph Abrahamson
category:            Network, Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Network.HTTP.Conduit.OAuth
    Network.HTTP.Conduit.OAuth.Internal.Signing
    Network.HTTP.Conduit.OAuth.Internal.ToHTTP
    Network.HTTP.Conduit.OAuth.Types
    Network.HTTP.Conduit.OAuth.Types.Basic
    Network.HTTP.Conduit.OAuth.Types.Callback
    Network.HTTP.Conduit.OAuth.Types.Credentials
    Network.HTTP.Conduit.OAuth.Types.Params
    Network.HTTP.Conduit.OAuth.Types.Server
  other-modules:
    Network.HTTP.Conduit.OAuth.Util
  build-depends:       base                >= 4.6      && <  4.7
                     , attoparsec          >= 0.10.4.0 && <  0.11
                     , base16-bytestring   >= 0.1.1.5  && <  0.2
                     , base64-bytestring   >= 1.0.0.1  && <  1.1
                     , blaze-builder       >= 0.3.2.0  && <  0.4
                     , bytestring          >= 0.10.0.2 && <  0.11
                     , case-insensitive    >= 1.1.0.1  && <  1.2
                     , conduit             >= 1.0.9    && <  1.1
                     , containers          >= 0.5.0.0  && <  0.6
                     , contravariant       >= 0.4.4    && <  0.5
                     , cryptohash          >= 0.11.1   && <  0.12
                     , http-conduit        >= 1.9.5.1  && <  1.10
                     , http-types          >= 0.8.2    && <  0.9
                     , mmorph              >= 1.0.0    && <  2.0
                     , mtl                 >= 2.1.2    && <  2.2
                     , profunctors         >= 4.0.1    && <  4.1
                     , random              >= 1.0.1.1  && <  1.1
                     , time                >= 1.4.0.1  && <  1.5
                     , transformers        >= 0.3.0.0  && <  0.4
  hs-source-dirs:      src         
  ghc-options:         -Wall
  default-language:    Haskell2010