name:                oauthenticated
version:             0.0.3
synopsis:            Simple OAuth client code built atop http-conduit

description:         

  OAuth is a popular protocol allowing servers to offer resources
  owned by some user to a series of authorized clients securely. For
  instance, OAuth lets Twitter provide access to a user's private
  tweets to the Twitter client registered on their phone.
  
  @oauthenticated@ is a Haskell library implementing OAuth protocols
  atop the popular @http-conduit@ HTTP client library. The goal is to
  provide a general framework for signing
  'Network.HTTP.Conduit.Request's according to server parameters, a
  simple method for executing the common 3-arm OAuth token negotiation
  protocol, and a simplified API for accessing OAuth-protected
  resources.

  Currently @oauthenticated@ only supports OAuth 1.0 and is in
  alpha. Further testing is needed before trustworthy use can be
  established. Further, OAuth 2.0 support is planned.

license:             MIT
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
copyright:           2013 (c) Joseph Abrahamson
category:            Network, Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Network.OAuth.MuLens
  build-depends:       base                >= 4.6      && <  4.7
                     , aeson
                     , base64-bytestring
                     , blaze-builder
                     , bytestring
                     , case-insensitive
                     , contravariant
                     , crypto-random
                     , cryptohash
                     , http-client
                     , http-types
                     , network
                     , mtl
                     , profunctors
                     , transformers

                     -- hide interface as possible (easy compat with thyme)
                     , time

  hs-source-dirs:      src         
  ghc-options:         -Wall
  default-language:    Haskell2010
